crates/core/tests/snapshots/setting_merge_test__setting_merge__named_struct__replaces_collections_without_merge_attr.snap
---
source: crates/core/tests/setting_merge_test.rs
expression: pretty(container.impl_partial_merge())
---
fn merge(
    &mut self,
    context: &Self::Context,
    mut next: Self,
) -> std::result::Result<(), schematic::ConfigError> {
    use schematic::internal::*;
    MergeManager::new(context)
        .apply(&mut self.a, next.a)?
        .apply(&mut self.b, next.b)?
        .apply(&mut self.c, next.c)?;
    Ok(())
}
