crates/core/tests/snapshots/setting_merge_test__setting_merge__named_struct__supports_nested.snap
---
source: crates/core/tests/setting_merge_test.rs
expression: pretty(container.impl_partial_merge())
---
fn merge(
    &mut self,
    context: &Self::Context,
    mut next: Self,
) -> std::result::Result<(), schematic::ConfigError> {
    use schematic::internal::*;
    MergeManager::new(context)
        .nested(&mut self.a, next.a)?
        .nested(&mut self.b, next.b)?
        .nested(&mut self.c, next.c)?
        .apply_with(
            &mut self.d,
            next.d,
            |mut prev, next, context| {
                (*Arc::make_mut(&mut prev))
                    .merge(context, Arc::unwrap_or_clone(next))
                    .map_err(|error| schematic::MergeError(error.to_string()))?;
                Ok(Some(prev))
            },
        )?;
    Ok(())
}
