crates/core/tests/snapshots/setting_merge_test__setting_merge__named_struct__supports_nested_collections.snap
---
source: crates/core/tests/setting_merge_test.rs
expression: pretty(container.impl_partial_merge())
---
fn merge(
    &mut self,
    context: &Self::Context,
    mut next: Self,
) -> std::result::Result<(), schematic::ConfigError> {
    use schematic::internal::*;
    MergeManager::new(context)
        .apply_with(&mut self.a, next.a, append_vec)?
        .apply_with(&mut self.b, next.b, merge_hashmap)?
        .apply_with(&mut self.a, next.a, merge_btreeset)?;
    Ok(())
}
